new endpoints for auth service for other services
